# signature

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  bootstrap.sh  config.h.in  configure  configure.ac  configure.in  format.c  format.h  mkinstalldirs  quote.c  quote.h  signature.1  signature.c  signature.h  signature.lsm  signature.spec  signature.spec.in  x.signature
m4/: PLACEHOLDER.md
